# chip8

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cc
src/: CMakeLists.txt  emulator.cc  emulator.h  instruction.h  keyboard.h  screen.h  speaker.h  window.h
